feat: todo card

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="main-bottom">
                 <div class="container-fluid">
                     <div class="row flex-xl-row">
-                         <div class="col-12 col-xl-8 bg-dark"> <!--column top and left -->
+                         <div class="col-12 col-xl-8"> <!--column top and left -->
                             <div class="col-top">
                                 <div class="row">
                                     <div class="col-12"> <!--prossime classi -->
@@ -301,7 +301,7 @@
                                             </div>
                                         </div>
                                     </div> 
-                                    <div class="col-12">
+                                    <div class="col-12"> <!--FAQ -->
                                         <div class="py-4">
                                             <div class="card">
                                                 <div class="card-header fs-4">
@@ -341,13 +341,50 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div> <!--FAQ -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     <div class="col-12 col-xl-4 bg-warning"> <!--column bottom and right -->
                         <div class="col-bottom">
-                            hello
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="py-4">
+                                        <div class="card">
+                                            <div class="card-header fs-4">
+                                              Featured
+                                            </div>
+                                            <ul class="list-group list-group-flush">
+                                              <li class="list-group-item">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <label class="form-check-label" for="flexCheckDefault">
+                                                      Kickoff nuove classi
+                                                    </label>
+                                                </div>
+                                              </li>
+                                              <li class="list-group-item">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <label class="form-check-label" for="flexCheckDefault">
+                                                      Lezione su Bootstrap 5 in classe #75
+                                                    </label>
+                                                </div>
+                                              </li>
+                                              <li class="list-group-item">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <label class="form-check-label" for="flexCheckDefault">
+                                                      Controllare username github studenti
+                                                    </label>
+                                                </div>
+                                              </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col"></div>
+                            </div>
                         </div>
                     </div>
                   </div>
