--- a/index.html
+++ b/index.html
@@ -348,42 +348,66 @@
                     <div class="col-12 col-xl-4 bg-warning"> <!--column bottom and right -->
                         <div class="col-bottom">
                             <div class="row">
-                                <div class="col-12">
-                                    <div class="py-4">
+                                <div class="col-12"> <!--todo card -->
+                                    <div class="pt-4 pb-2">
                                         <div class="card">
                                             <div class="card-header fs-4">
-                                              Featured
+                                              Todo
                                             </div>
-                                            <ul class="list-group list-group-flush">
-                                              <li class="list-group-item">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                    <label class="form-check-label" for="flexCheckDefault">
-                                                      Kickoff nuove classi
-                                                    </label>
+                                            <div class="card-body">
+                                                <div class="card">
+                                                    <ul class="list-group list-group-flush">
+                                                    <li class="list-group-item">
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                            <label class="form-check-label" for="flexCheckDefault">
+                                                            Kickoff nuove classi
+                                                            </label>
+                                                        </div>
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                            <label class="form-check-label" for="flexCheckDefault">
+                                                            Lezione su Bootstrap 5 in classe #75
+                                                            </label>
+                                                        </div>
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                        <div class="form-check">
+                                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                            <label class="form-check-label" for="flexCheckDefault">
+                                                            Controllare username github studenti
+                                                            </label>
+                                                        </div>
+                                                    </li>
+                                                    </ul>
                                                 </div>
-                                              </li>
-                                              <li class="list-group-item">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                    <label class="form-check-label" for="flexCheckDefault">
-                                                      Lezione su Bootstrap 5 in classe #75
-                                                    </label>
-                                                </div>
-                                              </li>
-                                              <li class="list-group-item">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                                    <label class="form-check-label" for="flexCheckDefault">
-                                                      Controllare username github studenti
-                                                    </label>
-                                                </div>
-                                              </li>
-                                            </ul>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col"></div>
+                                <div class="col-12"> <!--sink card active users -->
+                                    <div class="pt-2 pb-4">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <div class="card">
+                                                    <img src="/img/stats.jpeg" class="card-img-top" alt="stats">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title fs-6">Utenti Attivi</h5>
+                                                        <p class="card-text">Lista degli utenti attivi iun piattaforma nell'ultimo mese</p>
+                                                    </div>
+                                                    <ul class="list-group list-group-flush">
+                                                        <li class="list-group-item">Gennaio: 1200</li>
+                                                        <li class="list-group-item">Febbraio: 800</li>
+                                                        <li class="list-group-item">Marzo: 1500</li>
+                                                        <li class="list-group-item py-3"><a href="#">Visualizza report approfondito</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> 
                             </div>
                         </div>
                     </div>
