feat: fixed padding main

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                         </div>
                                     </div> 
                                     <div class="col-12"> <!--FAQ -->
-                                        <div class="py-4">
+                                        <div class="py-xl-4 pb-4">
                                             <div class="card">
                                                 <div class="card-header fs-4">
                                                   F.A.Q.
@@ -345,11 +345,11 @@
                                 </div>
                             </div>
                         </div>
-                    <div class="col-12 col-xl-4 bg-warning"> <!--column bottom and right -->
+                    <div class="col-12 col-xl-4"> <!--column bottom and right -->
                         <div class="col-bottom">
                             <div class="row">
                                 <div class="col-12"> <!--todo card -->
-                                    <div class="pt-4 pb-2">
+                                    <div class="pt-xl-4 pb-4">
                                         <div class="card">
                                             <div class="card-header fs-4">
                                               Todo
@@ -388,7 +388,7 @@
                                     </div>
                                 </div>
                                 <div class="col-12"> <!--sink card active users -->
-                                    <div class="pt-2 pb-4">
+                                    <div class="pb-4">
                                         <div class="card">
                                             <div class="card-body">
                                                 <div class="card">
