--- a/index.html
+++ b/index.html
@@ -32,16 +32,22 @@
                 </div>
             </div>
             <div class="col-auto"> <!-- 3rd Column - dropdown link -->
-                <div class="dropdown">
-                    <a class="btn btn-secondary bg-white border-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fa-solid fa-bell text-warning fs-4"></i>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Profilo</a></li>
-                        <li><a class="dropdown-item" href="#">Fatturazione</a></li>
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
-                    </ul>
-                </div>
+               
+                <ul class="d-flex list-unstyled align-items-center mb-0">
+                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-list-ul text-warning fs-4 me-3 d-none d-xl-flex"></i></a></li>
+                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-circle-question text-warning fs-4 me-3 d-none d-xl-flex"></i></a></li>
+                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-ellipsis-vertical text-warning fs-4 me-3 d-none d-xl-flex"></i></a></li>
+                    <li class=""><a href="#" class="text-decoration-none">
+                        <div class="dropdown">
+                            <a class="btn btn-secondary bg-white border-0 px-0 py-1 me-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> <i class="fa-solid fa-bell text-warning fs-4"></i> </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Profilo</a></li>
+                                <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                                <li><a class="dropdown-item" href="#">Logout</a></li>
+                            </ul>
+                        </div>
+                    </a></li>  
+                </ul>
             </div>
         </div>
     </header>
@@ -388,7 +394,7 @@
                                     </div>
                                 </div>
                                 <div class="col-12"> <!--sink card active users -->
-                                    <div class="pb-4">
+                                    <div class="pb-5">
                                         <div class="card">
                                             <div class="card-body">
                                                 <div class="card">
