--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="col-auto"> <!-- 3rd Column - dropdown link -->
                
                 <ul class="d-flex list-unstyled align-items-center mb-0">
-                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-list-ul text-warning fs-4 me-3 d-none d-xl-flex"></i></a></li>
-                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-circle-question text-warning fs-4 me-3 d-none d-xl-flex"></i></a></li>
-                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-ellipsis-vertical text-warning fs-4 me-3 d-none d-xl-flex"></i></a></li>
+                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-list-ul text-secondary fs-4 me-3 d-none d-xl-flex"></i></a></li>
+                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-circle-question text-secondary fs-4 me-3 d-none d-xl-flex"></i></a></li>
+                    <li class=""><a href="#" class="text-decoration-none"><i class="fa-solid fa-ellipsis-vertical text-secondary fs-4 me-3 d-none d-xl-flex"></i></a></li>
                     <li class=""><a href="#" class="text-decoration-none">
                         <div class="dropdown">
                             <a class="btn btn-secondary bg-white border-0 px-0 py-1 me-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> <i class="fa-solid fa-bell text-warning fs-4"></i> </a>
@@ -58,21 +58,21 @@
             <!-- top navbar -->
             <div class="nav-top">
                     <ul class="list-unstyled">
-                        <li class="mb-4">
+                        <li class="mb-4 px-2 py-2">
                         <a href="#" class="text-white text-decoration-none">
-                            <i class="fa-solid fa-house fs-4"></i> 
+                            <i class="fa-solid fa-house fs-4 me-3"></i> 
                             <span class="d-none d-xl-inline">Home</span>
                         </a>
                         </li>
-                        <li class="mb-4">
+                        <li class="mb-4 px-2 py-2">
                         <a href="#" class="text-white text-decoration-none">
-                            <i class="fa-solid fa-chart-simple fs-4"></i>
+                            <i class="fa-solid fa-chart-simple fs-4 me-4"></i>
                             <span class="d-none d-xl-inline">Stats</span>
                         </a>
                         </li>
-                        <li class="mb-4">
+                        <li class="mb-4 px-2 py-2">
                         <a href="#" class="text-white text-decoration-none">
-                            <i class="fa-solid fa-signal fs-4"></i>
+                            <i class="fa-solid fa-signal fs-4 me-3"></i>
                             <span class="d-none d-xl-inline">Signals</span>
                         </a>
                         </li>
