feat: sidebar improved responsivness

--- a/index.html
+++ b/index.html
@@ -56,33 +56,33 @@
     <main class="d-flex">
         <nav class="sidebar text-white container py-5 d-flex flex-column align-items-center">
             <!-- top navbar -->
-            <div class="nav-top">
-                    <ul class="list-unstyled">
+            <div class="nav-top h-100">
+                    <ul class="list-unstyled d-flex flex-column h-100 text-center">
                         <li class="mb-4 px-2 py-2">
                         <a href="#" class="text-white text-decoration-none">
-                            <i class="fa-solid fa-house fs-4 me-3"></i> 
-                            <span class="d-none d-xl-inline">Home</span>
+                            <i class="fa-solid fa-house fs-4"></i> 
+                            <span class="d-none d-xl-inline ms-4">Home</span>
                         </a>
                         </li>
                         <li class="mb-4 px-2 py-2">
                         <a href="#" class="text-white text-decoration-none">
-                            <i class="fa-solid fa-chart-simple fs-4 me-4"></i>
-                            <span class="d-none d-xl-inline">Stats</span>
+                            <i class="fa-solid fa-chart-simple fs-4"></i>
+                            <span class="d-none d-xl-inline ms-4">Stats</span>
                         </a>
                         </li>
                         <li class="mb-4 px-2 py-2">
                         <a href="#" class="text-white text-decoration-none">
-                            <i class="fa-solid fa-signal fs-4 me-3"></i>
-                            <span class="d-none d-xl-inline">Signals</span>
+                            <i class="fa-solid fa-signal fs-4"></i>
+                            <span class="d-none d-xl-inline ms-4">Signals</span>
                         </a>
+                        </li>
+                        <li class="px-2 py-2 mt-auto">
+                            <a href="#" class="text-white text-decoration-none">
+                                <i class="fa-solid fa-gear fs-4"></i><span class="d-none d-xl-inline ms-4">Admin</span>
+                            </a>
                         </li>
                     </ul>
             </div>
-            <!-- bottom navbar -->
-            <div class="bottom-navbar mt-auto">
-                <i class="fa-solid fa-gear fs-4"></i>
-            </div>
-            <!-- /bottom navbar -->
         </nav>
         <!-- right container -->
         <div class="right-container d-flex flex-column">
