feat: offcanvas mobile width fixed

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                     </div>
                                     <div class="offcanvas-body">
                                         <div class="row d-flex justify-content-between">
-                                            <div class="col mb-3">
+                                            <div class="col-12 mb-3 col-xl">
                                                 <label for="input-name" class="form-label">Nome</label>
                                                 <input type="text" class="form-control" id="input-name" placeholder="">
                                             </div>
@@ -113,7 +113,7 @@
                                             </div>   
                                         </div>
                                         <div class="row d-flex justify-content-between">
-                                            <div class="form-group col">
+                                            <div class="form-group col-12 mb-2 col-xl">
                                                 <label for="input-email" class="form-label">Email</label>
                                                 <div class="input-group mb-3">
                                                 <span class="input-group-text" id="basic-addon1">@</span>
@@ -130,12 +130,12 @@
                                             <input type="text" class="form-control" id="input-address" placeholder="">
                                         </div>
                                         <div class="row d-flex justify-content-between">
-                                            <div class="col mb-3">
+                                            <div class="col-12 mb-3 col-xl mb-3">
                                                 <label for="input-city" class="form-label">Città</label>
                                                 <input type="text" class="form-control" id="input-city" placeholder="">
                                             </div>
-                                            <div class="col mb-3 d-flex">
-                                                <div class="col-8 me-2">
+                                            <div class="col mb-3 d-flex flex-column flex-xl-row">
+                                                <div class="col-12 mb-3 col-xl-8 me-2">
                                                     <label for="input-state" class="form-label">Stato</label>
                                                     <select class="form-select" aria-label="Default select example">
                                                     <option selected>Scegli...</option>
@@ -144,7 +144,7 @@
                                                     <option value="3">Germania</option>
                                                 </select>
                                                 </div>
-                                                <div>
+                                                <div class="col-12 mb-2 col-xl">
                                                     <label for="input-postal-code" class="form-label">CAP</label>
                                                     <input type="text" class="form-control" id="input-postal-code" placeholder="">
                                                 </div>
